--- a/tasks/static/css/styles.css
+++ b/tasks/static/css/styles.css
@@ -1,42 +1,91 @@
-.containder-fluid {
+.container-fluid {
     padding: 0;
+}
+
+.container-fluid .row {
+    margin: 0;
 }
 
 /* Navbar */
 
-.navbar {
+.navbar  {
     border-bottom: 1px solid #333;
     margin-bottom: 20px;
 }
 
-.navbar.nav {
+.navbar-nav {
     margin: auto;
 }
-
 
 .navbar-brand {
     font-weight: bold;
 }
-.navbar-light .navbar-nav a.navbar-link {
+
+.navbar-light .navbar-nav a.nav-link {
     color: #333;
     letter-spacing: 1px;
 }
 
-/* Botão de adicionar  */
+/* dashboard */
+.dashboard {
+    padding: 0;
+    width: 100%;
+    display: block;
+}
 
-.add-link {
+.dashboard h4 {
+    font-size: 20px;
+}
+
+.dashboard span {
+    font-size: 40px;
+    display: block;
+    width: 100%;
+}
+
+.dashboard-box {
+    float: left;
+    background-color: #DFDFDF;
+    color: #FFF;
+    padding: 20px;
+    box-sizing: border-box;
+    height: 130px;
+    width: 32%;
+    text-align: center;
+}
+
+.dashboard-box:nth-child(2) {
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+}
+
+#dashboard-lastdays {
+    background-color: #3476e2;
+}
+
+#dashboard-done {
+    background-color: #13c43f;
+}
+
+#dashboard-doing {
+    background-color: #db1e47;
+}
+
+/* Botão de adicionar */
+
+
+#add-link {
     text-decoration: none;
-
 }
 
 .add-div {
-    background-color: #0c3e8f;
+    background-color: #3476e2;
     cursor: pointer;
     display: inline-block;
     color: #FFF;
     padding: 8px;
     border-radius: 5px;
-    margin-bottom: 25px;
+    margin-right: 25px;
 }
 
 .fas.fa-plus {
@@ -46,26 +95,40 @@
 }
 
 /* Search */
+
 .fas.fa-search {
     position: absolute;
     top: 12px;
     right: 26px;
+    cursor: pointer;
 }
 
 .search-div {
-    padding: 0px;
+    padding: 0;
     margin-top: 15px;
     margin-bottom: 15px;
     display: inline-block;
 }
 
-/*tasks list */
+/* filter */
+.filter-div {
+    margin-bottom: 15px;
+    padding: 0;
+}
+
+#filter {
+    display: inline-block;
+    width: 200px;
+    margin-left: 10px;
+}
+
+/* Lista de tarefas */
 
 .list-div {
     padding: 0;
 }
 
-.tasks-list {
+.task-list {
     padding-left: 0;
 }
 
@@ -73,30 +136,47 @@
     list-style: none;
     font-size: 20px;
     height: 50px;
+    padding: 0 15px;
     padding-top: 10px;
-    border-bottom: 1px dashed #ccc;
+    border-bottom: 1px dashed #CCC;
 }
 
-.fas.fa-trash, .fas.fa-edit {
+.task-item.done {
+    background-color: #CCC;
+}  
+
+.fas.fa-trash {
+    color: #db1e47;
     cursor: pointer;
     margin: 5px;
     font-size: 20px;
     float: right;
 }
 
-.fas.fa-trash {
-    color: red;
-}
-
 .fas.fa-edit {
-    color: green;
+    color: #13c43f;
+    cursor: pointer;
+    margin: 5px;
+    font-size: 20px;
+    float: right;
 }
 
-/*footer */
+.fa-check {
+    color: #CCC;
+    cursor: pointer;
+    margin: 5px;
+    font-size: 20px;
+    float: right;
+}
 
+.done .fa-check {
+    color: #3476e2;
+}
+
+/* Rodapé */
 footer {
     background-color: #333;
-    height: 200px;
+    height: 300px;
     border-top: 2px solid #202020;
 }
 
@@ -105,4 +185,41 @@ footer p {
     text-align: center;
     top: 50%;
     position: relative;
+}
+
+/* Messages */
+
+ul.messages {
+    padding: 0;
+}
+
+ul.messages li {
+    list-style: none;
+}
+
+/* Paginação */
+.pagination {
+    margin-bottom: 20px;
+}
+
+.step-links {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.step-links .current {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+/* login */
+
+.auth-card {
+    margin-bottom: 30px;
+}
+
+.change-form-p {
+    margin-top: 30px;
+    text-align: center;
 }
