--- a/tasks/templates/tasks/yourname.html
+++ b/tasks/templates/tasks/yourname.html
@@ -3,5 +3,5 @@
 {% block title %}Qual é o seu nome?{% endblock %}
 
 {% block content %}
-<h1>O seu nome é: {{ name }}</h1>
+<h1>O seu nome é {{ name }}</h1>
 {% endblock %}
